--- a/src/app/common/main-nav/main-nav.component.html
+++ b/src/app/common/main-nav/main-nav.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#noticias">Noticias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#cards">Novedades</a>
+          <a class="nav-link" href="#novedades">Novedades</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#login">Login</a>
