--- a/src/app/home/cards/cards.component.html
+++ b/src/app/home/cards/cards.component.html
@@ -1,5 +1,10 @@
-<section id="cards">
-    <div class="row container-fluid">
+<section id="novedades" class="padded">
+  <div class="center-titulo" >
+    <h3 class="title">
+       Novedades 
+    </h3>
+  </div>
+    <div class="row container-fluid grids">
       <div class="col-sm-3">
         <div class="efecto-image card" >         
           <a class="nav-link active" aria-current="page" href="#"  >
