--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,17 +1,17 @@
-<section id="login" >
-    <div class="container-fluid">
+<section id="login">
+    <div class="container">
       <div class="formWraper">
         <div class="formDiv">
          
-          <p class="text">Inicia Sesion con una red social</p>
+          <p class="text">Inicia Sesion </p>
           <div class="socialBtn">
-           <div class="facebook icon"><i class="fab fa-facebook-f"></i></div>
-           <div class="instagram icon"><i class="fab fa-instagram"></i></div>
-           <div class="twitter icon"><i class="fab fa-twitter"></i></div>  
+           <div class="icon"><i class="bi bi-facebook"></i></div>
+           <div class="instagram icon"><i class="bi bi-instagram"></i></div>
+           <div class="twitter icon"><i class="bi bi-twitter"></i></div>  
         </div>
         <hr><!--Linea Horizontal-->
         <div class="orDiv">O</div>
-        <p class="text">Inicia Sesion con tu correo</p>
+        <p class="text"> Ingresa tu Correo</p>
         <div class="formGroup">
          <i class="far fa-user"></i>
           <input type="text" name="name" id="name" placeholder="Name">
@@ -24,10 +24,7 @@
          <i class="fas fa-lock"></i>
          <input type="password" name="name" id="password" placeholder="Password">
        </div>
-       <div class="checkBox">
-         <input type="checkbox" name="checkbox" id="checkbox">
-         <span class="text">Estoy de acuerdo con los terminos & condiciones</span>
-       </div>
+       
        <button class="btn1">REGISTRATE</button>
       </div>
       <div class="welcomeDiv">
