--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -6,11 +6,11 @@
 
         <div class="col" *ngFor=" let item of listaTop">
           <div class="card">
-            <img src="https://brunoraffwebservice.000webhostapp.com/{{item.foto}}" class="card-img-top" alt="...">
+            <img src="https://brunoraffwebservice.000webhostapp.com/{{item.Imagen_juego}}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{item.nombre}}</h5>
-              <p class="card-text">{{item.desaJuego}}</p>
-              <small>{{item.precio}}</small>
+              <h5 class="card-title">{{item.Nom_juego}}</h5>
+              <p class="card-text">{{item.Desarrollador_juego}}</p>
+              <small>{{item.Precio_juego}}</small>
             </div>
           </div>
         </div>
