--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -1,14 +1,16 @@
 .formWraper{
     display: flex;
-    width: 85%;
-    height: 630px;
-    background-image: url(/assets/6.jpg);
+    width: 100%;   
+    height: auto;
+    background-image: url(/assets/on.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin-top: 80px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px black;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .formDiv{
     width: 50%;
@@ -24,15 +26,14 @@
 
 .welcomeDiv{
     width: 50%;
-    padding:10px;
-   
-    
+    padding:10px; 
     text-align: center;
-    color: black;
+    color: #f4f6f8;
 }
 .welcomeDiv h2{
     margin-top: 150px;
-    font-weight: 900;
+    font-weight: 700;
+    letter-spacing: 5px;
 }
 .socialBtn{
     display: flex;
@@ -43,14 +44,15 @@
     width: 30px;
     height: 30px;
     border-radius: 15px;
-    background-color:lavender;
+    background-color:transparent;
     margin: 5px;
     line-height: 30px;
     box-shadow: 0px 0px 10px black;
+    color:#446084 ;
 }
 .text{
-    font-size: small;
-    color:black;
+    font-size: 14px;
+    color:#f4f6f8;
     font-weight: 900;
 }
 .orDiv{
@@ -86,30 +88,37 @@ input::placeholder{
     margin-top: 2px;
 }
 .btn1{
-    width: 70%;
-    padding: 15px;
+    width: 40%;
+    padding: 10px;
     background-color:#446084;
-    margin-top: 15px;
+    margin-top: 10px;
     color: white;
     border-radius:20px;
     border-style:none;
     font-weight: 900;
 }
 .btn2{
-    width: 70%;
-    padding: 15px;
-    background-color:transparent;
-    margin-top: 15px;
+    width: 40%;
+    padding: 10px;
+    background-color:#446084;
+    margin-top: 10px;
     color: white;
     border-radius:20px;
     border-style:none;
-    border: 2px solid black;
+    
     font-weight: 900;
+    
 }
-.btn1:hover, .btn2:hover, .icon:hover{
+.icon:hover{
+    background-color:#e9edf3;
+    cursor: pointer;
+}
+.btn1:hover, .btn2:hover{
     background-color:#446084;
+    cursor: pointer;
 }
-@media screen and(max-width:1000px){
+
+/* @media screen and(max-width:1000px){
     .formWraper{
         width: 70%;
     }
@@ -119,10 +128,8 @@ input::placeholder{
         width: 90%;
         border-radius: 10px 10px 10px 10px;
     }
-    .welcomeDiv{
-        display:none;
-    }
-}
+   
+} */
 
 .container-fluid{
     display: flex;
