--- a/src/app/home/nosotros/nosotros.component.html
+++ b/src/app/home/nosotros/nosotros.component.html
@@ -1,9 +1,24 @@
 <section id="nosotros" class="padded">
     <div class="container">
-      <h2>nuestra  Misión</h2>
+      <h2>Nuestra  Misión</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum dolor temporibus rerum reprehenderit amet provident perspiciatis porro quis enim sed suscipit debitis, vero minus eaque fuga quasi numquam eveniet tempore in placeat ad corporis, itaque iure! Obcaecati officiis ad ex hic distinctio perspiciatis magni alias, quaerat totam quos quidem dolorem a cum consequuntur ipsum, maxime modi commodi adipisci ea perferendis non? Nisi quas ab ullam exercitationem dolorem, tenetur itaque ea provident cum laudantium ad, maiores minus reiciendis ducimus velit quia.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta rem optio dolor repellendus minus quisquam? Saepe ipsam nam blanditiis sit, placeat consectetur. Quidem error vitae minima illo saepe dolor eos mollitia quae maiores maxime soluta debitis, ab consequatur alias quasi adipisci ipsam ipsum enim earum animi suscipit rem? Quam sint vero ducimus alias. Maiores tempore, nobis sequi tempora saepe nihil.</p>
-      <p>Ipsum quisquam maxime inventore ab praesentium in enim tempore, sint consequatur id officiis maiores possimus eveniet numquam culpa asperiores ullam aspernatur explicabo? Nemo eligendi odio vitae esse cumque commodi debitis aliquid temporibus vero quos et repudiandae, quis consequatur reiciendis ex exercitationem iusto? Molestiae beatae omnis, maxime perspiciatis quisquam veniam recusandae impedit sed quod dolorem voluptates. Molestias iusto temporibus amet exercitationem.</p>
+      
+      <div class="container">
+
+        <div class="imagen">
+          <div class="overlay">
+              <div class="contenido-imagen">
+                  <h2>games all the time</h2>
+                  <button class="button">
+                   <h6>learn more</h6> 
+                </button>
+              </div>
+          </div>
+              <img class="img-fluid" src="assets/banner0000.jpg" alt="">
+      </div>
+
+      </div>
       
     </div>
   </section>
