--- a/src/app/home/presentacion/presentacion.component.css
+++ b/src/app/home/presentacion/presentacion.component.css
@@ -1,35 +1,16 @@
-#presentacion{
-    background-color: var(--colorbodyblanco);
-    
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 50px 15px 50px 15px;
-}
+
 
 .card{
     background-color: var(--colorbodyblanco);
     --bs-card-inner-border-radius: none;
     --bs-card-border-width: 0px;
-}
-.btn{
-    border-radius: 0px;
-    background-color: var(--color-blanco);
-    border: 0px; 
-
-
-
-    position: relative;
-    transition: all 0.6s;   
+    margin-bottom: 15px;
+    cursor: pointer;
 }
 
 
 
-.btn-primary{
-    --bs-btn-hover-bg: var(--color2);
-    --bs-btn-color: var(--colorbotonazul);
-    --bs-btn-hover-color:var(--color1);
-    
-}
+
 
 h5{
     color:var(--colortitle)
@@ -53,3 +34,17 @@ h5{
  .title{
     color: var(--colortitle);    
  }
+ 
+.card-client {        
+    text-align: center;
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    transition: all 0.3s ease;
+    background-color:  var(--colorbodyblanco);
+  }
+  
+  .card-client:hover {
+    transform: translateY(-10px);
+  }
+  
+  
