--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -2,6 +2,7 @@
 <app-nosotros></app-nosotros>
 <app-presentacion></app-presentacion>
 <app-noticias></app-noticias>
+<app-top-consolas></app-top-consolas>
 <app-cards></app-cards>
 <app-login></app-login>
 
