--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -10,7 +10,8 @@
             <div class="card-body">
               <h5 class="card-title">{{item.Nom_juego}}</h5>
               <p class="card-text">{{item.Desarrollador_juego}}</p>
-              <small>{{item.Precio_juego}}</small>
+              <p>{{item.Genero_juego}}</p>
+              <p>{{item.Precio_juego}}</p>
             </div>
           </div>
         </div>
