--- a/src/app/home/presentacion/presentacion.component.html
+++ b/src/app/home/presentacion/presentacion.component.html
@@ -9,7 +9,7 @@
     <div class="col-sm-4">
       <div class="card text-center card-image card-client ">
         <div>
-          <img src="assets/banner.jpg" class="card-img-top imagen"  alt="...">
+          <img src="assets/banner9.jpg" class="card-img-top imagen"  alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Metal: hellsinger</h5>
@@ -21,7 +21,7 @@
     <div class="col-sm-4">
       <div class="card text-center card-client">
         <div>
-          <img src="assets/banner2.jpg" class="card-img-top" alt="...">
+          <img src="assets/banner10.jpg" class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Slime Rancher 2</h5>
@@ -33,7 +33,7 @@
     <div class="col-sm-4">
       <div class="card text-center card-client">
         <div>
-          <img src="assets/banner3.jpg" class="card-img-top" alt="...">
+          <img src="assets/banner11.jpg" class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Call of Duty MW2</h5>
@@ -45,7 +45,7 @@
     <div class="col-sm-4">
       <div class="card text-center card-client">
         <div>
-          <img src="assets/banner3.jpg" class="card-img-top" alt="...">
+          <img src="assets/banner12.jpg" class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Call of Duty MW2</h5>
@@ -56,7 +56,7 @@
     <div class="col-sm-4">
       <div class="card text-center card-client">
         <div>
-          <img src="assets/banner3.jpg" class="card-img-top" alt="...">
+          <img src="assets/banner13.jpg" class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Call of Duty MW2</h5>
@@ -68,7 +68,7 @@
     <div class="col-sm-4">
       <div class="card text-center card-client">
         <div>
-          <img src="assets/banner3.jpg" class="card-img-top" alt="...">
+          <img src="assets/banner14.jpg" class="card-img-top" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title">Call of Duty MW2</h5>          
