--- a/src/app/home/top-consolas/top-consolas.component.html
+++ b/src/app/home/top-consolas/top-consolas.component.html
@@ -5,10 +5,10 @@
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
-                    <th>Juego</th>
-                    <th>Consola</th>
-                    <th>Ranking</th>
-                    <th>Tipo de juego</th>
+                    <th id="encabezado">Juego</th>
+                    <th id="encabezado">Consola</th>
+                    <th id="encabezado">Ranking</th>
+                    <th id="encabezado">Tipo de juego</th>
                 </tr>
             </thead>
             <tbody>
